[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy",
    "ruff>=0.1.6"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
ignore-missing-imports = true

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "I",
    "D",
]
ignore = []
line-length = 88

extend-ignore = [
    "D100",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D415"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]